# Silvar-rtech

./: .gitmodules  Helloworld.txt  silvarikaart.pgm  silvarikaart.yaml
ajutinekaust/mouse_reader/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
ajutinekaust/mouse_reader/launch/: mouse_reader.launch
ajutinekaust/mouse_reader/msg/: mouse.msg
ajutinekaust/mouse_reader/src/: mouse_reader.cpp  mouse_reader.cpp~
ajutinekaust/pointer_visualizer/: CMakeLists.txt
ajutinekaust/pointer_visualizer/config/: pointer.rviz  pointer.rviz~
ajutinekaust/pointer_visualizer/launch/: pointer.launch  pointer.launch~
ajutinekaust/pointer_visualizer/src/: pointer.cpp  pointer.cpp~
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/beginners_tutorials/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
devel/include/griffin_powermate/: PowermateEvent.h
devel/include/keyboard_reader/: Key.h
devel/include/motoman_msgs/: CmdJointTrajectoryExRequest.h  CmdJointTrajectoryExResponse.h  DynamicJointPoint.h  DynamicJointState.h  DynamicJointTrajectory.h  DynamicJointTrajectoryFeedback.h  DynamicJointsGroup.h
devel/include/mouse_reader/: mouse.h
devel/lib/griffin_powermate/: griffin_powermate
devel/lib/huskyrobot/: huskyrobot
devel/lib/keyboard_reader/: keyboard_event_publisher
devel/lib/motoman_driver/: motion_streaming_interface  (+4 more)
src/beginners_tutorials/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/dual_manipulator_config/: .setup_assistant  CMakeLists.txt  package.xml
src/dual_manipulator_config2/: .setup_assistant  CMakeLists.txt
src/dual_manipulator_support/: CMakeLists.txt  package.xml
src/huskyrobot/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/motoman_sia5d_moveit_config/: .setup_assistant  package.xml
src/mouse_reader/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/mouse_reader/include/: mouse_reader.h
src/mouse_reader/include/mouse_reader/: mouse.h  mouse.h~  mouse_reader.h  mouse_reader.h~
src/mouse_reader/launch/: mouse_reader.launch  mouse_reader.launch~  mouse_reader.txt~
src/mouse_reader/msg/: mouse.msg  mouse.msg~
src/mouse_reader/src/: keyboard_reader.cpp  keyboard_reader.cpp.rtf  mouse_reader.cpp  mouse_reader.cpp~  mouse_reader.txt~
src/mouse_reader/src/saast/: mouse_reader.txt
src/my_r2d2/: CMakeLists.txt
src/planning_tutorial/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/pointer_visualizer/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/usb_camera/: CMakeLists.txt  CMakeLists.txt~  package.xml
(+180 files in other folders)
